# OpenGLSetupClion

./: CMakeLists.txt  README.md  imgui.ini  main.cpp  orbo.txt
dependencies/GLFW/include/GLFW/: glfw3.h
dependencies/glm/: CMakeLists.txt
dependencies/imgui/: CMakeLists.txt
header files/: block.h  camera.h  chunk.cpp  chunk.h  entity.h  mesh.h  model.h  shader.h  texture.h  transform.h  vao.h
include/: CMakeLists.txt
resources/: usefulThings.txt
resources/models/ball/: ball.mtl  bally.mtl
resources/models/floor Tiles/: Floor.mtl  tiles.mtl
resources/models/orbo/: Orbo_Obj.mtl
resources/models/pc/: pc.mtl
resources/models/terrain/: Terrain.mtl
resources/models/treb/: Trebushay.mtl
resources/models/vec/: Vector_001.mtl
resources/shaders/: fragment.glsl  fragment_001.glsl  light_fragment.glsl  light_vertex.glsl  outlineFragment.glsl  postProcessFragment.glsl  postProcessVertex.glsl  skyboxFragment.glsl  skyboxVertex.glsl  vertex.glsl  vertex_001.glsl
